[package]
name = "vvvdb"
version = "0.1.0"
authors = ["TLightSky <wangchao719@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.4.3"
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
nom-sql = "0.0.11"
